vendor/htslib/sam.h


typedef struct sam_hrecs_t sam_hrecs_t;
typedef struct sam_hdr_t {
  int32_t n_targets, ignore_sam_err;
  size_t l_text;
  uint32_t *target_len;
  const int8_t *cigar_tab HTS_DEPRECATED("Use bam_cigar_table[] instead");
  char **target_name;
  char *text;
  void *sdict;
  sam_hrecs_t *hrecs;
  uint32_t ref_count;
} sam_hdr_t;
typedef struct bam1_core_t {
  hts_pos_t pos;
  int32_t tid;
  uint16_t bin; 
  uint8_t qual;
  uint8_t l_extranul;
  uint16_t flag;
  uint16_t l_qname;
  uint32_t n_cigar;
  int32_t l_qseq;
  int32_t mtid;
  hts_pos_t mpos;
  hts_pos_t isize;
} bam1_core_t;
typedef struct bam1_t {
  bam1_core_t core;
  uint64_t id;
  uint8_t *data;
  int l_data;
  uint32_t m_data;
  uint32_t mempolicy : 2, : 30 ;
} bam1_t;
typedef htsFile samFile;
HTSLIB_EXPORT
hts_itr_t *sam_itr_regions(const hts_idx_t *idx, sam_hdr_t *hdr,
                           hts_reglist_t *reglist, unsigned int regcount);
HTSLIB_EXPORT
hts_itr_t *sam_itr_regarray(const hts_idx_t *idx, sam_hdr_t *hdr,
                            char **regarray, unsigned int regcount);
static inline int sam_itr_next(htsFile *htsfp, hts_itr_t *itr, bam1_t *r) {
  if (!htsfp->is_bgzf && !htsfp->is_cram) {
    hts_log_error("%s not BGZF compressed", htsfp->fn ? htsfp->fn : "File");
    return -2;
  }
  if (!itr) {
    hts_log_error("Null iterator");
    return -2;
  }
  if (itr->multi)
    return hts_itr_multi_next(htsfp, itr, r);
  else
    return hts_itr_next(htsfp->is_bgzf ? htsfp->fp.bgzf : NULL, itr, r, htsfp);
}
HTSLIB_EXPORT
const char *sam_parse_region(sam_hdr_t *h, const char *s, int *tid,
                             hts_pos_t *beg, hts_pos_t *end, int flags);
HTSLIB_EXPORT
int sam_open_mode(char *mode, const char *fn, const char *format);
HTSLIB_EXPORT
char *sam_open_mode_opts(const char *fn, const char *mode, const char *format);
HTSLIB_EXPORT
int sam_hdr_change_HD(sam_hdr_t *h, const char *key, const char *val);
HTSLIB_EXPORT
int sam_parse1(kstring_t *s, sam_hdr_t *h, bam1_t *b) HTS_RESULT_USED;
HTSLIB_EXPORT
int sam_format1(const sam_hdr_t *h, const bam1_t *b,
                kstring_t *str) HTS_RESULT_USED;
HTSLIB_EXPORT
int sam_read1(samFile *fp, sam_hdr_t *h, bam1_t *b) HTS_RESULT_USED;
HTSLIB_EXPORT
int sam_write1(samFile *fp, const sam_hdr_t *h,
               const bam1_t *b) HTS_RESULT_USED;
struct hts_filter_t;
HTSLIB_EXPORT
int sam_passes_filter(const sam_hdr_t *h, const bam1_t *b,
                      struct hts_filter_t *filt);
static inline const uint8_t *
sam_format_aux1(const uint8_t *key, const uint8_t type, const uint8_t *tag,
                const uint8_t *end, kstring_t *ks) {
  int r = 0;
  const uint8_t *s = tag; 
  r |= kputsn_((char *)key, 2, ks) < 0;
  r |= kputc_(':', ks) < 0;
  if (type == 'C') {
    r |= kputsn_("i:", 2, ks) < 0;
    r |= kputw(*s, ks) < 0;
    ++s;
  } else if (type == 'c') {
    r |= kputsn_("i:", 2, ks) < 0;
    r |= kputw(*(int8_t *)s, ks) < 0;
    ++s;
  } else if (type == 'S') {
    if (end - s >= 2) {
      r |= kputsn_("i:", 2, ks) < 0;
      r |= kputuw(le_to_u16(s), ks) < 0;
      s += 2;
    } else
      goto bad_aux;
  } else if (type == 's') {
    if (end - s >= 2) {
      r |= kputsn_("i:", 2, ks) < 0;
      r |= kputw(le_to_i16(s), ks) < 0;
      s += 2;
    } else
      goto bad_aux;
  } else if (type == 'I') {
    if (end - s >= 4) {
      r |= kputsn_("i:", 2, ks) < 0;
      r |= kputuw(le_to_u32(s), ks) < 0;
      s += 4;
    } else
      goto bad_aux;
  } else if (type == 'i') {
    if (end - s >= 4) {
      r |= kputsn_("i:", 2, ks) < 0;
      r |= kputw(le_to_i32(s), ks) < 0;
      s += 4;
    } else
      goto bad_aux;
  } else if (type == 'A') {
    r |= kputsn_("A:", 2, ks) < 0;
    r |= kputc_(*s, ks) < 0;
    ++s;
  } else if (type == 'f') {
    if (end - s >= 4) {
      ksprintf(ks, "f:%g", (double)le_to_float(s));
      s += 4;
    } else
      goto bad_aux;
  } else if (type == 'd') {
    if (end - s >= 8) {
      ksprintf(ks, "d:%g", le_to_double(s));
      s += 8;
    } else
      goto bad_aux;
  } else if (type == 'Z' || type == 'H') {
    r |= kputc_(type, ks) < 0;
    r |= kputc_(':', ks) < 0;
    while (s < end && *s)
      r |= kputc_(*s++, ks) < 0;
    r |= kputsn("", 0, ks) < 0; 
    if (s >= end)
      goto bad_aux;
    ++s;
  } else if (type == 'B') {
    uint8_t sub_type = *(s++);
    unsigned sub_type_size;
    switch (sub_type) {
    case 'A':
    case 'c':
    case 'C':
      sub_type_size = 1;
      break;
    case 's':
    case 'S':
      sub_type_size = 2;
      break;
    case 'i':
    case 'I':
    case 'f':
      sub_type_size = 4;
      break;
    default:
      sub_type_size = 0;
      break;
    }
    uint32_t i, n;
    if (sub_type_size == 0 || end - s < 4)
      goto bad_aux;
    n = le_to_u32(s);
    s += 4; 
    if ((size_t)(end - s) / sub_type_size < n)
      goto bad_aux;
    r |= kputsn_("B:", 2, ks) < 0;
    r |= kputc(sub_type, ks) < 0; 
    switch (sub_type) {
    case 'c':
      if (ks_expand(ks, n * 2) < 0)
        goto mem_err;
      for (i = 0; i < n; ++i) {
        ks->s[ks->l++] = ',';
        r |= kputw(*(int8_t *)s, ks) < 0;
        ++s;
      }
      break;
    case 'C':
      if (ks_expand(ks, n * 2) < 0)
        goto mem_err;
      for (i = 0; i < n; ++i) {
        ks->s[ks->l++] = ',';
        r |= kputuw(*(uint8_t *)s, ks) < 0;
        ++s;
      }
      break;
    case 's':
      if (ks_expand(ks, n * 4) < 0)
        goto mem_err;
      for (i = 0; i < n; ++i) {
        ks->s[ks->l++] = ',';
        r |= kputw(le_to_i16(s), ks) < 0;
        s += 2;
      }
      break;
    case 'S':
      if (ks_expand(ks, n * 4) < 0)
        goto mem_err;
      for (i = 0; i < n; ++i) {
        ks->s[ks->l++] = ',';
        r |= kputuw(le_to_u16(s), ks) < 0;
        s += 2;
      }
      break;
    case 'i':
      if (ks_expand(ks, n * 6) < 0)
        goto mem_err;
      for (i = 0; i < n; ++i) {
        ks->s[ks->l++] = ',';
        r |= kputw(le_to_i32(s), ks) < 0;
        s += 4;
      }
      break;
    case 'I':
      if (ks_expand(ks, n * 6) < 0)
        goto mem_err;
      for (i = 0; i < n; ++i) {
        ks->s[ks->l++] = ',';
        r |= kputuw(le_to_u32(s), ks) < 0;
        s += 4;
      }
      break;
    case 'f':
      if (ks_expand(ks, n * 8) < 0)
        goto mem_err;
      for (i = 0; i < n; ++i) {
        ks->s[ks->l++] = ',';
        r |= kputd((double)le_to_float(s), ks) < 0;
        s += 4;
      }
      break;
    default:
      goto bad_aux;
    }
  } else { 
    goto bad_aux;
  }
  return r ? NULL : s;
bad_aux:
  errno = EINVAL;
  return NULL;
mem_err:
  hts_log_error("Out of memory");
  errno = ENOMEM;
  return NULL;
}
HTSLIB_EXPORT
uint8_t *bam_aux_first(const bam1_t *b);
HTSLIB_EXPORT
uint8_t *bam_aux_next(const bam1_t *b, const uint8_t *s);
HTSLIB_EXPORT
uint8_t *bam_aux_get(const bam1_t *b, const char tag[2]);
static inline const char *bam_aux_tag(const uint8_t *s) {
  return (const char *)(s - 2);
}
static inline char bam_aux_type(const uint8_t *s) { return *s; }
static inline int bam_aux_get_str(const bam1_t *b, const char tag[2],
                                  kstring_t *s) {
  const uint8_t *t = bam_aux_get(b, tag);
  if (!t)
    return errno == ENOENT ? 0 : -1;
  if (!sam_format_aux1(t - 2, *t, t + 1, b->data + b->l_data, s))
    return -1;
  return 1;
}
HTSLIB_EXPORT
int64_t bam_aux2i(const uint8_t *s);
HTSLIB_EXPORT
double bam_aux2f(const uint8_t *s);
HTSLIB_EXPORT
char bam_aux2A(const uint8_t *s);
HTSLIB_EXPORT
char *bam_aux2Z(const uint8_t *s);
HTSLIB_EXPORT
uint32_t bam_auxB_len(const uint8_t *s);
HTSLIB_EXPORT
int64_t bam_auxB2i(const uint8_t *s, uint32_t idx);
HTSLIB_EXPORT
double bam_auxB2f(const uint8_t *s, uint32_t idx);
HTSLIB_EXPORT
int bam_aux_append(bam1_t *b, const char tag[2], char type, int len,
                   const uint8_t *data);
HTSLIB_EXPORT
int bam_aux_del(bam1_t *b, uint8_t *s);
HTSLIB_EXPORT
uint8_t *bam_aux_remove(bam1_t *b, uint8_t *s);
HTSLIB_EXPORT
int bam_aux_update_str(bam1_t *b, const char tag[2], int len, const char *data);
HTSLIB_EXPORT
int bam_aux_update_int(bam1_t *b, const char tag[2], int64_t val);
HTSLIB_EXPORT
int bam_aux_update_float(bam1_t *b, const char tag[2], float val);
HTSLIB_EXPORT
int bam_aux_update_array(bam1_t *b, const char tag[2], uint8_t type,
                         uint32_t items, void *data);
typedef union {
  void *p;
  int64_t i;
  double f;
} bam_pileup_cd;
typedef int (*bam_plp_auto_f)(void *data, bam1_t *b);
struct bam_plp_s;
typedef struct bam_plp_s *bam_plp_t;
typedef struct bam_mplp_s *bam_mplp_t;
HTSLIB_EXPORT
bam_plp_t bam_plp_init(bam_plp_auto_f func, void *data);
HTSLIB_EXPORT
void bam_plp_destroy(bam_plp_t iter);
HTSLIB_EXPORT
int bam_plp_push(bam_plp_t iter, const bam1_t *b);
HTSLIB_EXPORT
void bam_plp_constructor(bam_plp_t plp, int (*func)(void *data, const bam1_t *b,
                                                    bam_pileup_cd *cd));
HTSLIB_EXPORT
void bam_plp_destructor(bam_plp_t plp, int (*func)(void *data, const bam1_t *b,
                                                   bam_pileup_cd *cd));
HTSLIB_EXPORT
void bam_mplp_constructor(bam_mplp_t iter,
                          int (*func)(void *data, const bam1_t *b,
                                      bam_pileup_cd *cd));
HTSLIB_EXPORT
void bam_mplp_destructor(bam_mplp_t iter,
                         int (*func)(void *data, const bam1_t *b,
                                     bam_pileup_cd *cd));