hts_mojo/_ffi/sam.mojo


def sam_itr_regions(idx: UnsafePointer[hts_idx_t, ImmutExternalOrigin], hdr: UnsafePointer[sam_hdr_t, MutExternalOrigin], reglist: UnsafePointer[hts_reglist_t, MutExternalOrigin], regcount: c_uint) abi("C") -> UnsafePointer[hts_itr_t, MutExternalOrigin]:
    return external_call["sam_itr_regions", UnsafePointer[hts_itr_t, MutExternalOrigin], UnsafePointer[hts_idx_t, ImmutExternalOrigin], UnsafePointer[sam_hdr_t, MutExternalOrigin], UnsafePointer[hts_reglist_t, MutExternalOrigin], c_uint](idx, hdr, reglist, regcount)

def sam_itr_regarray(idx: UnsafePointer[hts_idx_t, ImmutExternalOrigin], hdr: UnsafePointer[sam_hdr_t, MutExternalOrigin], regarray: UnsafePointer[UnsafePointer[c_char, MutExternalOrigin], MutExternalOrigin], regcount: c_uint) abi("C") -> UnsafePointer[hts_itr_t, MutExternalOrigin]:
    return external_call["sam_itr_regarray", UnsafePointer[hts_itr_t, MutExternalOrigin], UnsafePointer[hts_idx_t, ImmutExternalOrigin], UnsafePointer[sam_hdr_t, MutExternalOrigin], UnsafePointer[UnsafePointer[c_char, MutExternalOrigin], MutExternalOrigin], c_uint](idx, hdr, regarray, regcount)

def sam_itr_next(htsfp: UnsafePointer[htsFile, MutExternalOrigin], itr: UnsafePointer[hts_itr_t, MutExternalOrigin], r: UnsafePointer[bam1_t, MutExternalOrigin]) abi("C") -> c_int:
    return external_call["sam_itr_next", c_int, UnsafePointer[htsFile, MutExternalOrigin], UnsafePointer[hts_itr_t, MutExternalOrigin], UnsafePointer[bam1_t, MutExternalOrigin]](htsfp, itr, r)

def sam_parse_region(h: UnsafePointer[sam_hdr_t, MutExternalOrigin], s: UnsafePointer[c_char, ImmutExternalOrigin], tid: UnsafePointer[c_int, MutExternalOrigin], beg: UnsafePointer[hts_pos_t, MutExternalOrigin], end: UnsafePointer[hts_pos_t, MutExternalOrigin], flags: c_int) abi("C") -> UnsafePointer[c_char, ImmutExternalOrigin]:
    return external_call["sam_parse_region", UnsafePointer[c_char, ImmutExternalOrigin], UnsafePointer[sam_hdr_t, MutExternalOrigin], UnsafePointer[c_char, ImmutExternalOrigin], UnsafePointer[c_int, MutExternalOrigin], UnsafePointer[hts_pos_t, MutExternalOrigin], UnsafePointer[hts_pos_t, MutExternalOrigin], c_int](h, s, tid, beg, end, flags)

def sam_open_mode(mode: UnsafePointer[c_char, MutExternalOrigin], fn_: UnsafePointer[c_char, ImmutExternalOrigin], format: UnsafePointer[c_char, ImmutExternalOrigin]) abi("C") -> c_int:
    return external_call["sam_open_mode", c_int, UnsafePointer[c_char, MutExternalOrigin], UnsafePointer[c_char, ImmutExternalOrigin], UnsafePointer[c_char, ImmutExternalOrigin]](mode, fn_, format)

def sam_open_mode_opts(fn_: UnsafePointer[c_char, ImmutExternalOrigin], mode: UnsafePointer[c_char, ImmutExternalOrigin], format: UnsafePointer[c_char, ImmutExternalOrigin]) abi("C") -> UnsafePointer[c_char, MutExternalOrigin]:
    return external_call["sam_open_mode_opts", UnsafePointer[c_char, MutExternalOrigin], UnsafePointer[c_char, ImmutExternalOrigin], UnsafePointer[c_char, ImmutExternalOrigin], UnsafePointer[c_char, ImmutExternalOrigin]](fn_, mode, format)

def sam_hdr_change_HD(h: UnsafePointer[sam_hdr_t, MutExternalOrigin], key: UnsafePointer[c_char, ImmutExternalOrigin], val: UnsafePointer[c_char, ImmutExternalOrigin]) abi("C") -> c_int:
    return external_call["sam_hdr_change_HD", c_int, UnsafePointer[sam_hdr_t, MutExternalOrigin], UnsafePointer[c_char, ImmutExternalOrigin], UnsafePointer[c_char, ImmutExternalOrigin]](h, key, val)

def sam_parse1(s: UnsafePointer[kstring_t, MutExternalOrigin], h: UnsafePointer[sam_hdr_t, MutExternalOrigin], b: UnsafePointer[bam1_t, MutExternalOrigin]) abi("C") -> c_int:
    return external_call["sam_parse1", c_int, UnsafePointer[kstring_t, MutExternalOrigin], UnsafePointer[sam_hdr_t, MutExternalOrigin], UnsafePointer[bam1_t, MutExternalOrigin]](s, h, b)

def sam_format1(h: UnsafePointer[sam_hdr_t, ImmutExternalOrigin], b: UnsafePointer[bam1_t, ImmutExternalOrigin], str: UnsafePointer[kstring_t, MutExternalOrigin]) abi("C") -> c_int:
    return external_call["sam_format1", c_int, UnsafePointer[sam_hdr_t, ImmutExternalOrigin], UnsafePointer[bam1_t, ImmutExternalOrigin], UnsafePointer[kstring_t, MutExternalOrigin]](h, b, str)

def sam_read1(fp: UnsafePointer[samFile, MutExternalOrigin], h: UnsafePointer[sam_hdr_t, MutExternalOrigin], b: UnsafePointer[bam1_t, MutExternalOrigin]) abi("C") -> c_int:
    return external_call["sam_read1", c_int, UnsafePointer[samFile, MutExternalOrigin], UnsafePointer[sam_hdr_t, MutExternalOrigin], UnsafePointer[bam1_t, MutExternalOrigin]](fp, h, b)

def sam_write1(fp: UnsafePointer[samFile, MutExternalOrigin], h: UnsafePointer[sam_hdr_t, ImmutExternalOrigin], b: UnsafePointer[bam1_t, ImmutExternalOrigin]) abi("C") -> c_int:
    return external_call["sam_write1", c_int, UnsafePointer[samFile, MutExternalOrigin], UnsafePointer[sam_hdr_t, ImmutExternalOrigin], UnsafePointer[bam1_t, ImmutExternalOrigin]](fp, h, b)

def sam_passes_filter(h: UnsafePointer[sam_hdr_t, ImmutExternalOrigin], b: UnsafePointer[bam1_t, ImmutExternalOrigin], filt: UnsafePointer[hts_filter_t, MutExternalOrigin]) abi("C") -> c_int:
    return external_call["sam_passes_filter", c_int, UnsafePointer[sam_hdr_t, ImmutExternalOrigin], UnsafePointer[bam1_t, ImmutExternalOrigin], UnsafePointer[hts_filter_t, MutExternalOrigin]](h, b, filt)

def sam_format_aux1(key: UnsafePointer[uint8_t, ImmutExternalOrigin], type: uint8_t, tag: UnsafePointer[uint8_t, ImmutExternalOrigin], end: UnsafePointer[uint8_t, ImmutExternalOrigin], ks: UnsafePointer[kstring_t, MutExternalOrigin]) abi("C") -> UnsafePointer[uint8_t, ImmutExternalOrigin]:
    return external_call["sam_format_aux1", UnsafePointer[uint8_t, ImmutExternalOrigin], UnsafePointer[uint8_t, ImmutExternalOrigin], uint8_t, UnsafePointer[uint8_t, ImmutExternalOrigin], UnsafePointer[uint8_t, ImmutExternalOrigin], UnsafePointer[kstring_t, MutExternalOrigin]](key, type, tag, end, ks)

def bam_aux_first(b: UnsafePointer[bam1_t, ImmutExternalOrigin]) abi("C") -> UnsafePointer[uint8_t, MutExternalOrigin]:
    return external_call["bam_aux_first", UnsafePointer[uint8_t, MutExternalOrigin], UnsafePointer[bam1_t, ImmutExternalOrigin]](b)

def bam_aux_next(b: UnsafePointer[bam1_t, ImmutExternalOrigin], s: UnsafePointer[uint8_t, ImmutExternalOrigin]) abi("C") -> UnsafePointer[uint8_t, MutExternalOrigin]:
    return external_call["bam_aux_next", UnsafePointer[uint8_t, MutExternalOrigin], UnsafePointer[bam1_t, ImmutExternalOrigin], UnsafePointer[uint8_t, ImmutExternalOrigin]](b, s)

def bam_aux_get(b: UnsafePointer[bam1_t, ImmutExternalOrigin], tag: InlineArray[c_char, 2]) abi("C") -> UnsafePointer[uint8_t, MutExternalOrigin]:
    return external_call["bam_aux_get", UnsafePointer[uint8_t, MutExternalOrigin], UnsafePointer[bam1_t, ImmutExternalOrigin], InlineArray[c_char, 2]](b, tag)

def bam_aux_tag(s: UnsafePointer[uint8_t, ImmutExternalOrigin]) abi("C") -> UnsafePointer[c_char, ImmutExternalOrigin]:
    return external_call["bam_aux_tag", UnsafePointer[c_char, ImmutExternalOrigin], UnsafePointer[uint8_t, ImmutExternalOrigin]](s)

def bam_aux_type(s: UnsafePointer[uint8_t, ImmutExternalOrigin]) abi("C") -> c_char:
    return external_call["bam_aux_type", c_char, UnsafePointer[uint8_t, ImmutExternalOrigin]](s)

def bam_aux_get_str(b: UnsafePointer[bam1_t, ImmutExternalOrigin], tag: InlineArray[c_char, 2], s: UnsafePointer[kstring_t, MutExternalOrigin]) abi("C") -> c_int:
    return external_call["bam_aux_get_str", c_int, UnsafePointer[bam1_t, ImmutExternalOrigin], InlineArray[c_char, 2], UnsafePointer[kstring_t, MutExternalOrigin]](b, tag, s)

def bam_aux2i(s: UnsafePointer[uint8_t, ImmutExternalOrigin]) abi("C") -> int64_t:
    return external_call["bam_aux2i", int64_t, UnsafePointer[uint8_t, ImmutExternalOrigin]](s)

def bam_aux2f(s: UnsafePointer[uint8_t, ImmutExternalOrigin]) abi("C") -> c_double:
    return external_call["bam_aux2f", c_double, UnsafePointer[uint8_t, ImmutExternalOrigin]](s)

def bam_aux2A(s: UnsafePointer[uint8_t, ImmutExternalOrigin]) abi("C") -> c_char:
    return external_call["bam_aux2A", c_char, UnsafePointer[uint8_t, ImmutExternalOrigin]](s)

def bam_aux2Z(s: UnsafePointer[uint8_t, ImmutExternalOrigin]) abi("C") -> UnsafePointer[c_char, MutExternalOrigin]:
    return external_call["bam_aux2Z", UnsafePointer[c_char, MutExternalOrigin], UnsafePointer[uint8_t, ImmutExternalOrigin]](s)

def bam_auxB_len(s: UnsafePointer[uint8_t, ImmutExternalOrigin]) abi("C") -> uint32_t:
    return external_call["bam_auxB_len", uint32_t, UnsafePointer[uint8_t, ImmutExternalOrigin]](s)

def bam_auxB2i(s: UnsafePointer[uint8_t, ImmutExternalOrigin], idx: uint32_t) abi("C") -> int64_t:
    return external_call["bam_auxB2i", int64_t, UnsafePointer[uint8_t, ImmutExternalOrigin], uint32_t](s, idx)

def bam_auxB2f(s: UnsafePointer[uint8_t, ImmutExternalOrigin], idx: uint32_t) abi("C") -> c_double:
    return external_call["bam_auxB2f", c_double, UnsafePointer[uint8_t, ImmutExternalOrigin], uint32_t](s, idx)

def bam_aux_append(b: UnsafePointer[bam1_t, MutExternalOrigin], tag: InlineArray[c_char, 2], type: c_char, len: c_int, data: UnsafePointer[uint8_t, ImmutExternalOrigin]) abi("C") -> c_int:
    return external_call["bam_aux_append", c_int, UnsafePointer[bam1_t, MutExternalOrigin], InlineArray[c_char, 2], c_char, c_int, UnsafePointer[uint8_t, ImmutExternalOrigin]](b, tag, type, len, data)

def bam_aux_del(b: UnsafePointer[bam1_t, MutExternalOrigin], s: UnsafePointer[uint8_t, MutExternalOrigin]) abi("C") -> c_int:
    return external_call["bam_aux_del", c_int, UnsafePointer[bam1_t, MutExternalOrigin], UnsafePointer[uint8_t, MutExternalOrigin]](b, s)

def bam_aux_remove(b: UnsafePointer[bam1_t, MutExternalOrigin], s: UnsafePointer[uint8_t, MutExternalOrigin]) abi("C") -> UnsafePointer[uint8_t, MutExternalOrigin]:
    return external_call["bam_aux_remove", UnsafePointer[uint8_t, MutExternalOrigin], UnsafePointer[bam1_t, MutExternalOrigin], UnsafePointer[uint8_t, MutExternalOrigin]](b, s)

def bam_aux_update_str(b: UnsafePointer[bam1_t, MutExternalOrigin], tag: InlineArray[c_char, 2], len: c_int, data: UnsafePointer[c_char, ImmutExternalOrigin]) abi("C") -> c_int:
    return external_call["bam_aux_update_str", c_int, UnsafePointer[bam1_t, MutExternalOrigin], InlineArray[c_char, 2], c_int, UnsafePointer[c_char, ImmutExternalOrigin]](b, tag, len, data)

def bam_aux_update_int(b: UnsafePointer[bam1_t, MutExternalOrigin], tag: InlineArray[c_char, 2], val: int64_t) abi("C") -> c_int:
    return external_call["bam_aux_update_int", c_int, UnsafePointer[bam1_t, MutExternalOrigin], InlineArray[c_char, 2], int64_t](b, tag, val)

def bam_aux_update_float(b: UnsafePointer[bam1_t, MutExternalOrigin], tag: InlineArray[c_char, 2], val: c_float) abi("C") -> c_int:
    return external_call["bam_aux_update_float", c_int, UnsafePointer[bam1_t, MutExternalOrigin], InlineArray[c_char, 2], c_float](b, tag, val)

def bam_aux_update_array(b: UnsafePointer[bam1_t, MutExternalOrigin], tag: InlineArray[c_char, 2], type: uint8_t, items: uint32_t, data: MutOpaquePointer[MutExternalOrigin]) abi("C") -> c_int:
    return external_call["bam_aux_update_array", c_int, UnsafePointer[bam1_t, MutExternalOrigin], InlineArray[c_char, 2], uint8_t, uint32_t, MutOpaquePointer[MutExternalOrigin]](b, tag, type, items, data)

def bam_plp_init(func: bam_plp_auto_f, data: MutOpaquePointer[MutExternalOrigin]) abi("C") -> bam_plp_t:
    return external_call["bam_plp_init", bam_plp_t, bam_plp_auto_f, MutOpaquePointer[MutExternalOrigin]](func, data)

def bam_plp_destroy(iter: bam_plp_t) abi("C") -> None:
    external_call["bam_plp_destroy", NoneType, bam_plp_t](iter)

def bam_plp_push(iter: bam_plp_t, b: UnsafePointer[bam1_t, ImmutExternalOrigin]) abi("C") -> c_int:
    return external_call["bam_plp_push", c_int, bam_plp_t, UnsafePointer[bam1_t, ImmutExternalOrigin]](iter, b)
